<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/detailTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:textSize="14sp"
        android:padding="12dp"
        android:text="@string/tarea_prueba"/>

    <TextView
        android:id="@+id/idHideC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dateTaski"
        android:layout_below="@+id/detailTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:textSize="14sp"
        android:paddingLeft="12dp"
        android:text="@string/fecha_de_creaci_n"/>

    <TextView
        android:id="@+id/dateTaskf"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/detailTask"
        android:layout_toRightOf="@+id/dateTaski"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textStyle="italic"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        android:text="@string/_21_06_2018"/>

    <TextView
        android:id="@+id/checkTask"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="80dp"
        android:layout_toRightOf="@+id/dateTaskf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textStyle="italic"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/completada_t"/>

    <TextView
        android:id="@+id/eliminarTextC"
        android:layout_below="@+id/dateTaski"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:paddingLeft="12dp"
        android:text="@string/eliminar"/>

    <ImageView
        android:id="@+id/image_deleteC"
        android:layout_toRightOf="@id/eliminarTextC"
        android:layout_below="@id/dateTaskf"
        android:src="@drawable/botondelete"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_height="25dp"
        android:layout_width="25dp"
        android:onClick="deleteC" />

    <View
        android:id="@+id/divider"
        android:layout_marginTop="8dp"
        android:layout_below="@id/eliminarTextC"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

</RelativeLayout>